@@ -768,6 +768,8 @@ o.Add(
 		( "IECore.CubeColorTransformOp", "common/colorSpace/cubeColorTransform" ),
 		( "IECore.CineonToLinearOp", "common/colorSpace/cineonToLinear" ),
 		( "IECore.LinearToCineonOp", "common/colorSpace/linearToCineon" ),
+		( "IECore.AlexaLogcToLinearOp", "common/colorSpace/alexaLogcToLinear" ),
+		( "IECore.LinearToAlexaLogcOp", "common/colorSpace/linearToAlexaLogc" ),
 		( "IECore.SRGBToLinearOp", "common/colorSpace/SRGBToLinear" ),
 		( "IECore.LinearToSRGBOp", "common/colorSpace/linearToSRGB" ),
 		( "IECore.Rec709ToLinearOp", "common/colorSpace/Rec709ToLinear" ),
